--- a/Sem04/IWT/online_book_store/home.html
+++ b/Sem04/IWT/online_book_store/home.html
@@ -14,8 +14,8 @@
     </h1>
     <p>You can log in register or browse our catalog from the buttons below </p>
     <span>
-        <a class="button-19" href="0login.html" target="_blank">Login</a>
-        <a class="button-19" href="0catalog.html" target="_blank">Browse Catalog</a>
+        <a class="button-19" href="0login.html" target="_blank"><button>Login</button></a>
+        <a class="button-19" href="0catalog.html" target="_blank"><button>Browse Catalog</button></a>
         <!-- <a class="button-19" href="0register.html" target="_blank">Register</a> -->
     </span>
 </body>
