--- a/Sem04/IWT/online_book_store/log.html
+++ b/Sem04/IWT/online_book_store/log.html
@@ -16,7 +16,7 @@
     <input>
     <br>
     <br>
-    <a class="button-19" href="0catalog.html" target="_blank">Submit</a>
+    <a class="button-19" href="0catalog.html" target="_blank"><button>Submit</button></a>
 </body>
 
 </html>
