--- a/Sem04/IWT/online_book_store/title.html
+++ b/Sem04/IWT/online_book_store/title.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="background-color: white;">
+<body>
     <h1>Online book store</h1>
     <span>
         <a href="0login.html" target="_blank">Login</a> |
