2024 March 13, IWT Lab

--- a/Sem04/IWT/form-validator/index.html
+++ b/Sem04/IWT/form-validator/index.html
@@ -4,20 +4,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <title>Home Page</title>
+    <title>Login Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 100px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        input[type="email"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        .error {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
-    <h1 class="main-title">Select an option</h1>
-    <div class="body-div">
-        <button class="btn" onclick="login()">Login</button>
-        <button class="btn">Register</button>
+    <div class="container">
+        <h2>Login</h2>
+        <form id="loginForm" onsubmit="return validateForm();">
+            <label for="email">Email</label>
+            <input type="text" id="email" name="email">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password">
+            <button type="submit"></button>
+            <input type="submit" l value="Login">
+            <div id="error" class="error"></div>
+        </form>
     </div>
-    <br>
-    <marquee onmouseover="this.stop();" onmouseout="this.start();" loop="10000" class="marquee-in-body" behavior="slide"
-        direction="left">Example Marquee</marquee>
+
+    <script>
+        function submitForm() {
+            window.open("./success.html", "_self");
+            if (validateForm()) {
+                return validateForm();
+            }
+        }
+
+        function validateForm() {
+            var email = document.getElementById("email").value;
+            var password = document.getElementById("password").value;
+            var errorElement = document.getElementById("error");
+            var isValid = true;
+
+            // Reset previous error messages
+            errorElement.innerHTML = "";
+
+            // Email validation
+            if (!isValidEmail(email)) {
+                errorElement.innerHTML += "<p class='error'>Invalid email address</p>";
+                isValid = false;
+            }
+
+            // Password validation
+            if (password === "") {
+                errorElement.innerHTML += "<p class='error'>Password is required</p>";
+                isValid = false;
+            }
+
+            return isValid;
+        }
+
+        function isValidEmail(email) {
+            // Basic email format validation
+            if (!(email.includes("@")) || !(email.includes("."))) {
+                return false;
+            }
+
+            // Additional validation to ensure there's text before and after the '@' symbol
+            var atIndex = email.indexOf("@");
+            var dotIndex = email.lastIndexOf(".");
+            if (atIndex < 1 || dotIndex < atIndex + 2 || dotIndex === email.length - 1) {
+                return false;
+            }
+
+            return true;
+        }
+    </script>
 </body>
 
 </html>
