--- a/Sem04/IWT/form-validator/success.html
+++ b/Sem04/IWT/form-validator/success.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Success</title>
 </head>
+
 <body>
-    <p>Registration page</p>
+    <p>Successfully Logged in</p>
 </body>
+
 </html>
